spelling dict and common in helpers

--- a/project02/julie.ipynb
+++ b/project02/julie.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,9 +36,7 @@
       "epoch 4\n",
       "epoch 5\n",
       "epoch 6\n",
-      "epoch 7\n",
-      "epoch 8\n",
-      "epoch 9\n"
+      "epoch 7\n"
      ]
     }
    ],
@@ -106,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,24 +115,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Spelling changes\n",
-    "spelling_dict = {\"u\" : \"you\", \"dont\" : \"don't\", \"cant\" : \"can't\", \"r\" : \"are\", \"wont\" : \"won't\"}"
+    "spelling_dict = {\"u\" : \"you\", \"dont\" : \"don't\", \"cant\" : \"can't\", \"r\" : \"are\", \"wont\" : \"won't\"}\n",
+    "\n",
+    "#Common words to remove\n",
+    "common = ['\"', ',', '.', ')', '(', '-', \\\n",
+    "                \"<url>\", \"a\", \"the\", \"of\", \"to\", \\\n",
+    "                \"it\", \"this\", \"that\", \"these\", \"there\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Filter tweets\n",
-    "common = ['\"', ',', '.', ')', '(', '-', \\\n",
-    "                \"<user>\", \"<url>\", \"a\", \"the\", \"of\", \"to\", \\\n",
-    "                \"it\", \"this\", \"that\", \"these\", \"there\"]\n",
     "tweets_pos_vec_clean = tweet_means(unique_tweets_pos_txt, word_embeddings,\n",
     "                             words_list, word_embeddings[0].shape[0],\n",
     "                             spelling=True, spelling_dict=spelling_dict, \n",
@@ -240,15 +240,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM : 0.6134671593227816\n",
-      "SGD : 0.6115921248552363\n"
+      "SVM : 0.6155627860806265\n",
+      "SGD : 0.610930347984338\n"
      ]
     },
     {
@@ -263,8 +263,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR : 0.6081177962830199\n",
-      "MLP : 0.6166105994595489\n"
+      "LR : 0.610930347984338\n",
+      "MLP : 0.6185407819996691\n"
      ]
     }
    ],
@@ -314,12 +314,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Accuracy after clean + Samuel pipeline\n",
+    "# Accuracy after clean + Samuel pipeline (embedding = 20 features)\n",
     "\n",
+    "# Spelling changes\n",
+    "spelling_dict = {\"u\" : \"you\", \"dont\" : \"don't\", \"cant\" : \"can't\", \"r\" : \"are\", \"wont\" : \"won't\"}\n",
+    "\n",
+    "# Common words removed\n",
+    "common = ['\"', ',', '.', ')', '(', '-', \\\n",
+    "                \"<user>\", \"<url>\", \"a\", \"the\", \"of\", \"to\", \\\n",
+    "                \"it\", \"this\", \"that\", \"these\", \"there\"]\n",
+    "# Means with spelling, negation and clean to true\n",
+    "\n",
+    "# Results : \n",
     "SVM : 0.6134671593227816\n",
     "SGD : 0.6115921248552363\n",
     "LR : 0.6081177962830199\n",
     "MLP : 0.6166105994595489"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy after clean + Samuel pipeline (embedding = 20 features) \n",
+    "# Without removing user -> better\n",
+    "\n",
+    "# Spelling changes\n",
+    "spelling_dict = {\"u\" : \"you\", \"dont\" : \"don't\", \"cant\" : \"can't\", \"r\" : \"are\", \"wont\" : \"won't\"}\n",
+    "\n",
+    "# Common words removed\n",
+    "common = ['\"', ',', '.', ')', '(', '-', \\\n",
+    "                \"<url>\", \"a\", \"the\", \"of\", \"to\", \\\n",
+    "                \"it\", \"this\", \"that\", \"these\", \"there\"]\n",
+    "# Means with spelling, negation and clean to true\n",
+    "\n",
+    "# Results : \n",
+    "SVM : 0.6155627860806265\n",
+    "SGD : 0.610930347984338\n",
+    "LR : 0.610930347984338\n",
+    "MLP : 0.6185407819996691\n"
    ]
   }
  ],
