--- a/project02/sam.ipynb
+++ b/project02/sam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,11 +23,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading cooccurrence matrix\n",
+      "6496907 nonzero entries\n",
+      "using nmax = 100 , cooc.max() = 207302\n",
+      "initializing embeddings\n",
+      "epoch 0\n",
+      "epoch 1\n",
+      "epoch 2\n",
+      "epoch 3\n",
+      "epoch 4\n",
+      "epoch 5\n",
+      "epoch 6\n",
+      "epoch 7\n",
+      "epoch 8\n",
+      "epoch 9\n",
+      "epoch 10\n",
+      "epoch 11\n",
+      "epoch 12\n",
+      "epoch 13\n",
+      "epoch 14\n"
+     ]
+    }
+   ],
    "source": [
     "#!/usr/bin/env python3\n",
     "from scipy.sparse import *\n",
@@ -45,14 +71,14 @@
     "print(\"using nmax =\", nmax, \", cooc.max() =\", cooc.max())\n",
     "\n",
     "print(\"initializing embeddings\")\n",
-    "embedding_dim = 25\n",
+    "embedding_dim = 250\n",
     "xs = np.random.normal(size=(cooc.shape[0], embedding_dim))\n",
     "ys = np.random.normal(size=(cooc.shape[1], embedding_dim))\n",
     "\n",
     "eta = 0.001\n",
     "alpha = 3 / 4\n",
     "\n",
-    "epochs = 10\n",
+    "epochs = 15\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    print(\"epoch {}\".format(epoch))\n",
@@ -63,28 +89,28 @@
     "        scale = 2 * eta * fn * (logn - np.dot(x, y))\n",
     "        xs[ix, :] += scale * y\n",
     "        ys[jy, :] += scale * x\n",
-    "np.save('embeddings', xs)\n",
+    "np.save('embeddings_sam', xs)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(21161, 20)"
+       "(21161, 250)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "word_embeddings = np.load(\"embeddings.npy\")\n",
+    "word_embeddings = np.load(\"embeddings_sam.npy\")\n",
     "word_embeddings.shape"
    ]
   },
@@ -99,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,22 +140,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2133"
+       "12404"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.argmax(words_list==\"paul\")"
+    "np.argmax(words_list==\"cucumber\")"
    ]
   },
   {
@@ -141,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,18 +191,20 @@
     "for tw in tweets_pos_txt:\n",
     "    words_in_tweet = tw.split(\" \")\n",
     "    acc = np.zeros(word_embeddings[0].shape[0])\n",
+    "    n = 0\n",
     "    for w in words_in_tweet:\n",
     "        if w not in common_words:\n",
     "            vec = word_embeddings[np.argmax(words_list==w)]\n",
     "            acc += vec\n",
-    "    acc = acc/len(words_in_tweet)\n",
+    "            n += 1\n",
+    "    acc = 1.0*acc/n\n",
     "    tweets_pos_vec.append(acc)\n",
     "tweets_pos_vec = np.array(tweets_pos_vec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,11 +218,13 @@
     "for tw in tweets_neg_txt:\n",
     "    words_in_tweet = tw.split(\" \")\n",
     "    acc = np.zeros(word_embeddings[0].shape[0])\n",
+    "    n = 0\n",
     "    for w in words_in_tweet:\n",
     "        if w not in common_words:\n",
     "            vec = word_embeddings[np.argmax(words_list==w)]\n",
     "            acc += vec\n",
-    "    acc = acc/len(words_in_tweet)\n",
+    "            n += 1\n",
+    "    acc = 1.0*acc/n\n",
     "    tweets_neg_vec.append(acc)\n",
     "tweets_neg_vec = np.array(tweets_neg_vec)"
    ]
@@ -208,34 +238,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('tweets_pos_vec', tweets_pos_vec)\n",
-    "np.save('tweets_neg_vec', tweets_neg_vec)"
+    "np.save('tweets_pos_vec_sam', tweets_pos_vec)\n",
+    "np.save('tweets_neg_vec_sam', tweets_neg_vec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tweets_pos_vec = np.load('tweets_pos_vec.npy')\n",
-    "tweets_neg_vec = np.load('tweets_neg_vec.npy')"
+    "tweets_pos_vec = np.load('tweets_pos_vec_sam.npy')\n",
+    "tweets_neg_vec = np.load('tweets_neg_vec_sam.npy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = np.concatenate((tweets_pos_vec, tweets_neg_vec))\n",
     "y = np.concatenate((np.ones((tweets_pos_vec.shape[0])), -1*np.ones((tweets_pos_vec.shape[0]))))\n",
     "\n",
-    "X, y = remove_duplicated_tweets(X, y)\n",
+    "#X, y = remove_duplicated_tweets(X, y)\n",
     "\n",
     "indices = np.random.permutation(len(y))\n",
     "\n",
@@ -246,12 +276,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(\"tweets_X\", X)\n",
-    "np.save(\"tweets_y\", y)"
+    "np.save(\"tweets_X_sam\", X)\n",
+    "np.save(\"tweets_y_sam\", y)"
    ]
   },
   {
@@ -263,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,9 +341,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
+       "          intercept_scaling=1, loss='squared_hinge', max_iter=10000,\n",
+       "          multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
+       "          verbose=0)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lsvc = svm.LinearSVC(max_iter=10000)\n",
     "lsvc.fit(train_X, train_y)"
@@ -321,18 +365,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.60695"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "accuracy(test_y, lsvc.predict(test_X))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SGDClassifier(alpha=0.0001, average=False, class_weight=None,\n",
+       "              early_stopping=False, epsilon=0.1, eta0=0.0, fit_intercept=True,\n",
+       "              l1_ratio=0.15, learning_rate='optimal', loss='hinge',\n",
+       "              max_iter=1000, n_iter_no_change=5, n_jobs=None, penalty='l2',\n",
+       "              power_t=0.5, random_state=None, shuffle=True, tol=0.001,\n",
+       "              validation_fraction=0.1, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sgdcl = SGDClassifier()\n",
     "sgdcl.fit(train_X, train_y)"
@@ -340,9 +411,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.61145"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred = sgdcl.predict(test_X)\n",
     "accuracy(test_y, y_pred)"
@@ -350,9 +432,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/samuel/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
+       "                   random_state=None, solver='warn', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lr = LogisticRegression()\n",
     "lr.fit(train_X, train_y)"
@@ -360,9 +465,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.60645"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred = lr.predict(test_X)\n",
     "accuracy(test_y, y_pred)"
@@ -377,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -385,35 +501,35 @@
       "text/plain": [
        "MLPClassifier(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
        "              beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
-       "              hidden_layer_sizes=(100,), learning_rate='constant',\n",
+       "              hidden_layer_sizes=(200,), learning_rate='constant',\n",
        "              learning_rate_init=0.001, max_iter=1000, momentum=0.9,\n",
        "              n_iter_no_change=10, nesterovs_momentum=True, power_t=0.5,\n",
        "              random_state=None, shuffle=True, solver='adam', tol=0.0001,\n",
        "              validation_fraction=0.1, verbose=False, warm_start=False)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mlp = MLPClassifier(hidden_layer_sizes=(100,), max_iter=1000)\n",
+    "mlp = MLPClassifier(hidden_layer_sizes=(200,), max_iter=1000)\n",
     "mlp.fit(train_X, train_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6065310195708821"
+       "0.6747"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -433,35 +549,35 @@
       "text/plain": [
        "MLPClassifier(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
        "              beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
-       "              hidden_layer_sizes=(100, 20, 100), learning_rate='constant',\n",
+       "              hidden_layer_sizes=(400, 200, 100), learning_rate='constant',\n",
        "              learning_rate_init=0.001, max_iter=1000, momentum=0.9,\n",
        "              n_iter_no_change=10, nesterovs_momentum=True, power_t=0.5,\n",
        "              random_state=None, shuffle=True, solver='adam', tol=0.0001,\n",
        "              validation_fraction=0.1, verbose=False, warm_start=False)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mlp = MLPClassifier(hidden_layer_sizes=(100,20,100), max_iter=1000, activation='relu')\n",
+    "mlp = MLPClassifier(hidden_layer_sizes=(400,200,100), max_iter=1000, activation='relu')\n",
     "mlp.fit(train_X, train_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6040915895104507"
+       "0.67835"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,16 +620,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6023729001496922"
+       "0.63785"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,6 +637,13 @@
    "source": [
     "accuracy(y_final, test_y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
