--- a/project02/sam.ipynb
+++ b/project02/sam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,9 @@
     "from sklearn.linear_model import SGDClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neural_network import MLPClassifier\n",
-    "from helpers import *"
+    "from helpers import *\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn import neighbors"
    ]
   },
   {
@@ -23,37 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading cooccurrence matrix\n",
-      "6496907 nonzero entries\n",
-      "using nmax = 100 , cooc.max() = 207302\n",
-      "initializing embeddings\n",
-      "epoch 0\n",
-      "epoch 1\n",
-      "epoch 2\n",
-      "epoch 3\n",
-      "epoch 4\n",
-      "epoch 5\n",
-      "epoch 6\n",
-      "epoch 7\n",
-      "epoch 8\n",
-      "epoch 9\n",
-      "epoch 10\n",
-      "epoch 11\n",
-      "epoch 12\n",
-      "epoch 13\n",
-      "epoch 14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!/usr/bin/env python3\n",
     "from scipy.sparse import *\n",
@@ -95,20 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(21161, 250)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "word_embeddings = np.load(\"embeddings_sam.npy\")\n",
     "word_embeddings.shape"
@@ -125,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,20 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12404"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.argmax(words_list==\"cucumber\")"
    ]
@@ -167,12 +121,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "common_words = [\"a\", \"the\", \"of\", \"he\", \"she\", \"I\", \"we\", \"you\", \"they\", \"to\", \"out\", \"in\",\\\n",
-    "                \"oi\", \"it\", \"this\", \"that\", \"these\", \"there\"]"
+    "                \"oi\", \"it\", \"this\", \"that\", \"these\", \"there\", \"!\", \".\", \"?\", \"...\", \"(\", \")\", \"*\"]"
    ]
   },
   {
@@ -263,7 +217,7 @@
    "outputs": [],
    "source": [
     "X = np.concatenate((tweets_pos_vec, tweets_neg_vec))\n",
-    "y = np.concatenate((np.ones((tweets_pos_vec.shape[0])), -1*np.ones((tweets_neg_vec.shape[0]))))\n",
+    "y = np.concatenate((np.ones((tweets_pos_vec.shape[0])), -1*np.ones((tweets_pos_vec.shape[0]))))\n",
     "\n",
     "#X, y = remove_duplicated_tweets(X, y)\n",
     "\n",
@@ -285,6 +239,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -293,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,23 +302,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
-       "          intercept_scaling=1, loss='squared_hinge', max_iter=10000,\n",
-       "          multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
-       "          verbose=0)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lsvc = svm.LinearSVC(max_iter=10000)\n",
     "lsvc.fit(train_X, train_y)"
@@ -365,45 +312,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.60695"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "accuracy(test_y, lsvc.predict(test_X))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SGDClassifier(alpha=0.0001, average=False, class_weight=None,\n",
-       "              early_stopping=False, epsilon=0.1, eta0=0.0, fit_intercept=True,\n",
-       "              l1_ratio=0.15, learning_rate='optimal', loss='hinge',\n",
-       "              max_iter=1000, n_iter_no_change=5, n_jobs=None, penalty='l2',\n",
-       "              power_t=0.5, random_state=None, shuffle=True, tol=0.001,\n",
-       "              validation_fraction=0.1, verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sgdcl = SGDClassifier()\n",
     "sgdcl.fit(train_X, train_y)"
@@ -411,20 +331,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.61145"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred = sgdcl.predict(test_X)\n",
     "accuracy(test_y, y_pred)"
@@ -432,32 +341,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/samuel/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
-       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
-       "                   random_state=None, solver='warn', tol=0.0001, verbose=0,\n",
-       "                   warm_start=False)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lr = LogisticRegression()\n",
     "lr.fit(train_X, train_y)"
@@ -465,20 +351,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.60645"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred = lr.predict(test_X)\n",
     "accuracy(test_y, y_pred)"
@@ -493,47 +368,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MLPClassifier(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
-       "              beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
-       "              hidden_layer_sizes=(200,), learning_rate='constant',\n",
-       "              learning_rate_init=0.001, max_iter=1000, momentum=0.9,\n",
-       "              n_iter_no_change=10, nesterovs_momentum=True, power_t=0.5,\n",
-       "              random_state=None, shuffle=True, solver='adam', tol=0.0001,\n",
-       "              validation_fraction=0.1, verbose=False, warm_start=False)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mlp = MLPClassifier(hidden_layer_sizes=(200,), max_iter=1000)\n",
+    "mlp = MLPClassifier(hidden_layer_sizes=(400,), max_iter=1000)\n",
     "mlp.fit(train_X, train_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6747"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred = mlp.predict(test_X)\n",
     "accuracy(test_y, y_pred)"
@@ -541,26 +388,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MLPClassifier(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
-       "              beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
-       "              hidden_layer_sizes=(400, 200, 100), learning_rate='constant',\n",
-       "              learning_rate_init=0.001, max_iter=1000, momentum=0.9,\n",
-       "              n_iter_no_change=10, nesterovs_momentum=True, power_t=0.5,\n",
-       "              random_state=None, shuffle=True, solver='adam', tol=0.0001,\n",
-       "              validation_fraction=0.1, verbose=False, warm_start=False)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mlp = MLPClassifier(hidden_layer_sizes=(400,200,100), max_iter=1000, activation='relu')\n",
     "mlp.fit(train_X, train_y)"
@@ -568,24 +398,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = mlp.predict(test_X)\n",
+    "accuracy(test_y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = RandomForestClassifier(n_estimators=100, max_depth=3, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf.fit(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = clf.predict(test_X)\n",
+    "accuracy(test_y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_neighbors = 15\n",
+    "neigh = neighbors.KNeighborsClassifier(n_neighbors, weights='uniform')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.67835"
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "                     metric_params=None, n_jobs=None, n_neighbors=15, p=2,\n",
+       "                     weights='uniform')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred = mlp.predict(test_X)\n",
+    "neigh.fit(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = neigh.predict(test_X)\n",
     "accuracy(test_y, y_pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -596,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,20 +530,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.63785"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "accuracy(y_final, test_y)"
    ]
@@ -662,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
