200 features with clean + methods to clean before

--- a/project02/julie.ipynb
+++ b/project02/julie.ipynb
@@ -17,33 +17,134 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Do some cleaning before embedding and coocurrences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_txt(filename, unique, spelling, spelling_dict, negation, filtered, common):\n",
+    "    \"\"\"\n",
+    "    Create a new clean file from the txt file containing the tweets\n",
+    "    <filename> is the file we want to clean\n",
+    "    <unique>, a boolean, to say if we want to remove identique tweets\n",
+    "    <spelling>, a boolean, to say if we want to replace some words in the tweets\n",
+    "    <spelling_dict>, a dictionary, contains which words should be replaced and by what\n",
+    "    <negation>, a boolean, to say if we want to transform verbs like don't into do not\n",
+    "    <filtered>, a boolean, to say if we want to remove common words\n",
+    "    <common>, a list of common words to remove     \n",
+    "    \"\"\"\n",
+    "    new_filename = filename.replace(\".txt\", \"_clean.txt\")\n",
+    "    try:\n",
+    "        os.remove(new_filename)\n",
+    "    except OSError:\n",
+    "        pass\n",
+    "    \n",
+    "    prev_f = open(filename, \"r\")\n",
+    "    new_f = f= open(new_filename,\"w+\")\n",
+    "    \n",
+    "    tweets = prev_f.readlines()\n",
+    "    \n",
+    "    if(unique):\n",
+    "        tweets = list(set(tweets))\n",
+    "        \n",
+    "    tweets_1 = []   \n",
+    "    for t in tweets:\n",
+    "        new_t = t.split(\" \")\n",
+    "        new_t[-1] = new_t[-1].replace('\\n', \"\")\n",
+    "        tweets_1.append(new_t)\n",
+    "    tweets = tweets_1\n",
+    "\n",
+    "    if(spelling):\n",
+    "        new_tweets = []\n",
+    "        for t in tweets:\n",
+    "            new_tweets.append(transform_spelling(t, spelling_dict))\n",
+    "        tweets = new_tweets\n",
+    "               \n",
+    "    if(negation):\n",
+    "        new_tweets = []\n",
+    "        for t in tweets:\n",
+    "            new_tweets.append(transform_negation(t))\n",
+    "        tweets = new_tweets\n",
+    "        \n",
+    "    if(filtered):\n",
+    "        new_tweets = []\n",
+    "        for t in tweets:\n",
+    "            new_tweets.append(remove_words(common, t))\n",
+    "        tweets = new_tweets            \n",
+    "            \n",
+    "    for t in tweets:\n",
+    "        new_t = \" \".join(t)\n",
+    "        new_f.write(new_t)\n",
+    "        new_f.write('\\n')\n",
+    "    \n",
+    "    \n",
+    "    prev_f.close()\n",
+    "    new_f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test\n",
+    "spelling_test = {\"bla\" : \"ble\", \"blo\" : \"blu\"}\n",
+    "common_test = [\"!\", \"plop\"]\n",
+    "clean_txt(\"clean_test.txt\", True, True, spelling_test, True, True, common_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create embeddings and coocurrences"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading cooccurrence matrix\n",
-      "6496907 nonzero entries\n",
-      "using nmax = 100 , cooc.max() = 207302\n",
-      "initializing embeddings\n",
-      "epoch 0\n",
-      "epoch 1\n",
-      "epoch 2\n",
-      "epoch 3\n",
-      "epoch 4\n",
-      "epoch 5\n",
-      "epoch 6\n",
-      "epoch 7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Create embeddings with glove_solution\n",
-    "from glove_solution import main as glove_main\n",
-    "glove_main()"
+    "from glove_solution import main as glove_main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Raw data\n",
+    "file_name = 'cooc.pkl'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cleaned data\n",
+    "file_name = 'cooc_clean.pkl'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "glove_main(file_name)"
    ]
   },
   {
@@ -63,7 +164,7 @@
     {
      "data": {
       "text/plain": [
-       "(21161, 20)"
+       "(21161, 250)"
       ]
      },
      "execution_count": 3,
@@ -99,12 +200,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Do some data cleaning"
+    "# Do some data cleaning after embedding and coocurrences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"Deuxième blah cannot tweet can't blah\" \"Premier tweet do plop don't\"]\n",
+      "[['Deuxième', 'bleb', 'cannot', 'tweet', \"can't\", 'bleb'], ['Premier', 'tweet', 'do', 'splash', \"don't\"]]\n",
+      "[['Deuxième', 'bleb', 'cannot', 'tweet', 'can', 'not', 'bleb'], ['Premier', 'tweet', 'do', 'splash', 'do', 'not']]\n",
+      "[['Deuxième', 'bleb', 'cannot', 'can', 'not', 'bleb'], ['do', 'splash', 'do', 'not']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Tests\n",
+    "test_tweets = [\"Premier tweet do plop don't\", \"Deuxième blah cannot tweet can't blah\", \\\n",
+    "               \"Premier tweet do plop don't\", \"Premier tweet do plop don't\"]\n",
+    "#Remove duplicates :\n",
+    "unique = remove_duplicated_tweets_txt(test_tweets)\n",
+    "print(unique)\n",
+    "\n",
+    "#Spelling :\n",
+    "spelling_test = {\"blah\" : \"bleb\", \"plop\" : \"splash\"}\n",
+    "spelling = []\n",
+    "for u in unique:\n",
+    "    spelling.append(transform_spelling(u.split(\" \"), spelling_test))\n",
+    "print(spelling)\n",
+    "\n",
+    "#Negation\n",
+    "negated = []\n",
+    "for s in spelling:\n",
+    "    negated.append(transform_negation(s))\n",
+    "print(negated)\n",
+    "\n",
+    "#Filter :\n",
+    "common_test = [\"tweet\", \"Premier\"]\n",
+    "\n",
+    "filtered = []\n",
+    "for n in negated:\n",
+    "    filtered.append(remove_words(common_test, n))\n",
+    "print(filtered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Filter tweets\n",
     "tweets_pos_vec_clean = tweet_means(unique_tweets_pos_txt, word_embeddings,\n",
     "                             words_list, word_embeddings[0].shape[0],\n",
-    "                             spelling=True, spelling_dict=spelling_dict, \n",
-    "                             negation=True, \n",
-    "                             clean=True, common=common)\n",
+    "                             True, spelling_dict, \n",
+    "                             True, \n",
+    "                             True, common)\n",
     "tweets_neg_vec_clean = tweet_means(unique_tweets_neg_txt, word_embeddings, \n",
     "                             words_list, word_embeddings[0].shape[0], \n",
     "                             True, spelling_dict, \n",
@@ -185,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,15 +387,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM : 0.6155627860806265\n",
-      "SGD : 0.610930347984338\n"
+      "SVM : 0.6342579826835052\n",
+      "SGD : 0.6387249765620692\n"
      ]
     },
     {
@@ -263,8 +410,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR : 0.610930347984338\n",
-      "MLP : 0.6185407819996691\n"
+      "LR : 0.6327689847239839\n",
+      "MLP : 0.6565378040037501\n",
+      "MLP : hidden_layer_sizes=(400,200,100), max_iter=1000, activation='relu'0.6565378040037501\n"
      ]
     }
    ],
@@ -305,7 +453,11 @@
     "\n",
     "mlp = MLPClassifier(hidden_layer_sizes=(100,), max_iter=1000)\n",
     "mlp.fit(train_X, train_y)\n",
-    "print(\"MLP : \" + str(accuracy(test_y, mlp.predict(test_X))))"
+    "print(\"MLP : \" + str(accuracy(test_y, mlp.predict(test_X))))\n",
+    "\n",
+    "mlp = MLPClassifier(hidden_layer_sizes=(400,200,100), max_iter=1000, activation='relu')\n",
+    "mlp.fit(train_X, train_y)\n",
+    "print(\"MLP : hidden_layer_sizes=(400,200,100), max_iter=1000, activation='relu'\" + str(accuracy(test_y, mlp.predict(test_X))))"
    ]
   },
   {
@@ -314,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Accuracy after clean + Samuel pipeline (embedding = 20 features)\n",
+    "# Accuracy after clean (after embedding) + Samuel pipeline (embedding = 20 features)\n",
     "\n",
     "# Spelling changes\n",
     "spelling_dict = {\"u\" : \"you\", \"dont\" : \"don't\", \"cant\" : \"can't\", \"r\" : \"are\", \"wont\" : \"won't\"}\n",
@@ -325,11 +477,7 @@
     "                \"it\", \"this\", \"that\", \"these\", \"there\"]\n",
     "# Means with spelling, negation and clean to true\n",
     "\n",
-    "# Results : \n",
-    "SVM : 0.6134671593227816\n",
-    "SGD : 0.6115921248552363\n",
-    "LR : 0.6081177962830199\n",
-    "MLP : 0.6166105994595489"
+    "# Results : \n"
    ]
   },
   {
@@ -338,7 +486,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Accuracy after clean + Samuel pipeline (embedding = 20 features) \n",
+    "# Accuracy after clean (after embedding) + Samuel pipeline (embedding = 20 features) \n",
+    "# Without removing user -> better\n",
+    "\n",
+    "# Spelling changes\n",
+    "spelling_dict = {\"u\" : \"you\", \"dont\" : \"don't\", \"cant\" : \"can't\", \"r\" : \"are\", \"wont\" : \"won't\"}\n",
+    "\n",
+    "# Common words removed\n",
+    "common = ['\"', ',', '.', ')', '(', '-', \\\n",
+    "                \"<url>\", \"a\", \"the\", \"of\", \"to\", \\\n",
+    "                \"it\", \"this\", \"that\", \"these\", \"there\"]\n",
+    "# Means with spelling, negation and clean to true\n",
+    "\n",
+    "# Results : \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accuracy after clean (after embedding) + Samuel pipeline (embedding = 250 features) \n",
     "# Without removing user -> better\n",
     "\n",
     "# Spelling changes\n",
@@ -351,10 +520,11 @@
     "# Means with spelling, negation and clean to true\n",
     "\n",
     "# Results : \n",
-    "SVM : 0.6155627860806265\n",
-    "SGD : 0.610930347984338\n",
-    "LR : 0.610930347984338\n",
-    "MLP : 0.6185407819996691\n"
+    "SVM : 0.6342579826835052\n",
+    "SGD : 0.6387249765620692\n",
+    "LR : 0.6327689847239839\n",
+    "MLP : 0.6565378040037501\n",
+    "MLP : hidden_layer_sizes=(400,200,100), max_iter=1000, activation='relu'0.6565378040037501"
    ]
   }
  ],
