begin working with tensorflow

--- a/project02/sam.ipynb
+++ b/project02/sam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,9 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(21161, 250)"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "word_embeddings = np.load(\"embeddings_sam.npy\")\n",
     "word_embeddings.shape"
@@ -90,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,9 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "12404"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.argmax(words_list==\"cucumber\")"
    ]
@@ -131,12 +149,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-8aca465719c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mwords_in_tweet\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0mvec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mword_embeddings\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwords_list\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[0macc\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mvec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mn\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "tweets_pos_txt = []\n",
-    "f = open(\"Datasets/twitter-datasets/train_pos.txt\")\n",
+    "f = open(\"Datasets/twitter-datasets/train_pos_clean.txt\")\n",
     "for l in f.readlines():\n",
     "    tweets_pos_txt.append(l.strip())\n",
     "tweets_pos_txt = np.array(tweets_pos_txt)\n",
@@ -147,10 +177,9 @@
     "    acc = np.zeros(word_embeddings[0].shape[0])\n",
     "    n = 0\n",
     "    for w in words_in_tweet:\n",
-    "        if w not in common_words:\n",
-    "            vec = word_embeddings[np.argmax(words_list==w)]\n",
-    "            acc += vec\n",
-    "            n += 1\n",
+    "        vec = word_embeddings[np.argmax(words_list==w)]\n",
+    "        acc += vec\n",
+    "        n += 1\n",
     "    acc = 1.0*acc/n\n",
     "    tweets_pos_vec.append(acc)\n",
     "tweets_pos_vec = np.array(tweets_pos_vec)"
@@ -158,12 +187,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {},
    "outputs": [],
    "source": [
     "tweets_neg_txt = []\n",
-    "f = open(\"Datasets/twitter-datasets/train_neg.txt\")\n",
+    "f = open(\"Datasets/twitter-datasets/train_neg_clean.txt\")\n",
     "for l in f.readlines():\n",
     "    tweets_neg_txt.append(l.strip())\n",
     "tweets_neg_txt = np.array(tweets_neg_txt)\n",
@@ -174,10 +203,9 @@
     "    acc = np.zeros(word_embeddings[0].shape[0])\n",
     "    n = 0\n",
     "    for w in words_in_tweet:\n",
-    "        if w not in common_words:\n",
-    "            vec = word_embeddings[np.argmax(words_list==w)]\n",
-    "            acc += vec\n",
-    "            n += 1\n",
+    "        vec = word_embeddings[np.argmax(words_list==w)]\n",
+    "        acc += vec\n",
+    "        n += 1\n",
     "    acc = 1.0*acc/n\n",
     "    tweets_neg_vec.append(acc)\n",
     "tweets_neg_vec = np.array(tweets_neg_vec)"
@@ -254,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,17 +396,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "/Users/samuel/anaconda3/lib/python3.7/site-packages/sklearn/neural_network/multilayer_perceptron.py:568: UserWarning: Training interrupted by user.\n  warnings.warn(\"Training interrupted by user.\")\n"
+    },
+    {
+     "data": {
+      "text/plain": "MLPClassifier(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n              beta_2=0.999, early_stopping=False, epsilon=1e-08,\n              hidden_layer_sizes=(250, 250), learning_rate='constant',\n              learning_rate_init=0.001, max_iter=1000, momentum=0.9,\n              n_iter_no_change=10, nesterovs_momentum=True, power_t=0.5,\n              random_state=None, shuffle=True, solver='adam', tol=0.0001,\n              validation_fraction=0.1, verbose=False, warm_start=False)"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mlp = MLPClassifier(hidden_layer_sizes=(400,), max_iter=1000)\n",
+    "mlp = MLPClassifier(hidden_layer_sizes=(250, 250), max_iter=1000)\n",
     "mlp.fit(train_X, train_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,18 +502,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-       "                     metric_params=None, n_jobs=None, n_neighbors=15, p=2,\n",
-       "                     weights='uniform')"
-      ]
+      "text/plain": "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n                     metric_params=None, n_jobs=None, n_neighbors=15, p=2,\n                     weights='uniform')"
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
